--- a/template/hello.html
+++ b/template/hello.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Tornado Web</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
+	<title>Tornado Web</title>
+	<link rel="stylesheet" href="/staic/css/main.css">
 </head>
 <body>
 	<h1>Hello World!</h1>
 	<p>Welcome {{ name }}!</p>
+	
+	<script src="/static/js/main.js"></script>
 </body>
 </html>
